# gecko-docs-test

./: .gitignore  .gitlab-ci.yml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: benchmark.md  data-corruption.md  data-generation.md  index.md  why-geco.md
docs/examples/: german.md
gecko/data-corruption/: index.html
gecko/data-generation/: index.html
gecko/examples/german/: index.html
release-notes/: index.html
