[tool.poetry]
name = "geco-py3-docs"
version = "0.1.0"
description = ""
authors = ["Maximilian Jugl <Maximilian.Jugl@medizin.uni-leipzig.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
mkdocs-material = "^9.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
